Style: Fix Make Art challenges tips overflow (#429)
Prevent tips from overflowing their box.

--- a/styles/views/challenge.styl
+++ b/styles/views/challenge.styl
@@ -1,10 +1,22 @@
 .page-challenge
 
-    .button-hint
-        button-color(color-editor-bg)
+    .hint-container 
+        display flex
+        justify-content space-between
 
-        &.highlight
-            background red
+    .hint-content
+        display flex
+        flex-direction row
+
+    .button-container
+        display flex
+        align-items flex-start
+
+        .button-hint
+            button-color(color-editor-bg)
+
+            &.highlight
+                background red
 
     .success-display
         clearfix()
